# Bird

./: .pdm-python  README.md  package.json  pyproject.toml
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_control.rs  main.rs
src/birdspeeches/: MainWindow.py
