[project]
name = "BirdSpeeches"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Ermolaev", email = "blcklptn@icloud.com"},
]
dependencies = [
    "pyqt6>=6.5.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
